applications/overseerr/overseerr.yaml
---
# 1. Namespace
# A dedicated namespace for Overseerr resources.
apiVersion: v1
kind: Namespace
metadata:
  name: overseerr
  labels:
    name: overseerr
---
# 4. Deployment
# Manages the Overseerr application pod.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: overseerr
        #image: sctx/overseerr:latest
        image: fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 4Gi
          limits:
            cpu: 2000m
            memory: 4Gi
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: overseerr-config

---
# 5. Service
# Exposes the Overseerr deployment internally to the cluster.
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service
  namespace: overseerr
  labels:
    app: overseerr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/description: "Media Request Manager"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "jellyseerr.png"
    gethomepage.dev/href: "https://media.starnix.net"
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
  type: ClusterIP

---
# 6. Ingress with NGINX and Cert-Manager
# Configures external access and automates SSL with cert-manager.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: overseerr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/description: "Media Request Manager"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "jellyseerr.png"
    gethomepage.dev/href: "https://media.starnix.net"
    gethomepage.dev/pod-selector: "app=overseerr"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - media.starnix.net
    secretName: overseerr-tls-cert
  rules:
  - host: media.starnix.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr-service
            port:
              number: 5055
